# competitive-message-router

./: .gitignore  Cargo.toml  README.md  agi.html  agi2.html  cmr  cmr-peer.example.toml  cmr-peer.toml  cmr-peer.toml.bak.1771731673  cmr-peer.toml.bak.1771731712  cmr-peer.toml.bak.1771731982  cmr-peer.toml.bak.1771731987  cmr-peer.toml.bak.1771732302  cmr-peer.toml.bak.1771732407  deny.toml
.github/workflows/: codeql.yml  rust.yml  security.yml
crates/cmr-client/: Cargo.toml
crates/cmr-client/examples/: alice_bob_charlie.rs
crates/cmr-client/src/: lib.rs
crates/cmr-compressor/: Cargo.toml
crates/cmr-compressor/src/: main.rs
crates/cmr-compressor/tests/: worker_ipc.rs
crates/cmr-core/: Cargo.toml
crates/cmr-core/src/: compressor_ipc.rs  key_exchange.rs  lib.rs  policy.rs  protocol.rs  router.rs
crates/cmr-core/tests/: agi2_conformance.rs  audit_deviations.rs  core_tests.rs
crates/cmr-gui/: Cargo.toml
crates/cmr-gui/src/: app.rs  config.rs  crypto.rs  distance.rs  main.rs  wizard.rs
crates/cmr-peer/: Cargo.toml  cmr-peer.example.toml
crates/cmr-peer/assets/: client.html  dashboard.html
crates/cmr-peer/src/: app.rs  compressor_client.rs  config.rs  dashboard.rs  lib.rs  main.rs  storage.rs  transport.rs  tui.rs  web_client.rs
crates/cmr-peer/src/features/: dashboard.rs  mod.rs
crates/cmr-peer/tests/: config_transport.rs  docker_smtp.rs  persistence.rs
