[workspace]
members = [
    "crates/cmr-core",
    "crates/cmr-peer",
    "crates/cmr-compressor",
    "crates/cmr-client",
    "crates/cmr-gui",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "ISC OR Apache-2.0"
description = "Competitive Message Routing (CMR) protocol implementation in Rust."
repository = "https://github.com/turtle261/competitive-message-router"
homepage = "https://github.com/turtle261/competitive-message-router"
readme = "README.md"
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.dev]
opt-level = 3
