[package]
name = "cmr-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "High-level CMR client library for composing, sending, and receiving CMR messages."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cmr-client"
keywords = ["cmr", "client", "routing", "protocol"]
categories = ["network-programming", "api-bindings"]

[dependencies]
bytes = "1.10.1"
cmr-core = { version = "0.1.0", path = "../cmr-core" }
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "ring", "rustls-native-certs"] }
hyper-util = { version = "0.1.18", features = ["client", "http1", "server", "tokio"] }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls"] }
rand = "0.9.2"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "ring", "tls12"] }
url = "2.5.7"

[dev-dependencies]
cmr-peer = { version = "0.1.0", path = "../cmr-peer" }
tokio = { version = "1.48.0", features = ["time"] }
