[package]
name = "cmr-compressor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Isolated compressor worker for CMR distance and intrinsic-dependence computations."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cmr-compressor"
keywords = ["cmr", "compression", "ipc", "routing"]
categories = ["compression", "network-programming", "kolmogorov-complexity", "information-theory"]

[dependencies]
cmr-core = { version = "0.1.0", path = "../cmr-core" }
infotheory = { version = "1.0.1", default-features = false, features = ["backend-rosa", "backend-zpaq"] }
serde_json = "1.0.145"
rayon = "1.11.0"
