[package]
name = "cmr-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex = "0.4.3"
num-bigint = { version = "0.4.6", features = ["rand", "serde"] }
num-traits = "0.2.19"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
url = "2.5.7"
