[package]
name = "cmr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core protocol/parser/router primitives for Competitive Message Routing (CMR)."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
documentation = "https://docs.rs/cmr-core"
keywords = ["cmr", "routing", "protocol", "networking"]
categories = ["network-programming", "parser-implementations", "kolmogorov-complexity", "information-theory"]

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
hkdf = "0.12.4"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.17"
time = "0.3.44"
url = "2.5.7"

[dev-dependencies]
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
proptest = "1.9.0"
sha2 = "0.10.9"
