[package]
name = "cmr-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Native GTK4 GUI client for Competitive Message Routing (CMR)."
repository.workspace = true
homepage.workspace = true

[dependencies]
cmr-client = { version = "0.3.0", path = "../cmr-client" }
cmr-core = { version = "0.3.0", path = "../cmr-core" }
dirs = "5"
flate2 = "1"
glib = "0.20"
gtk4 = "0.9"
hex = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net"] }
toml = "0.8"

[lints]
workspace = true
