[package]
name = "cmr-peer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CMR peer daemon with HTTP/HTTPS/UDP listeners and multi-transport outbound delivery."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cmr-peer"
keywords = ["cmr", "peer", "routing", "daemon"]
categories = ["network-programming", "command-line-utilities"]

[features]
default = []
tui = ["dep:crossterm"]

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.53", features = ["derive"] }
cmr-core = { version = "0.1.0", path = "../cmr-core" }
crossterm = { version = "0.28.1", optional = true }
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "ring", "rustls-native-certs"] }
hyper-util = { version = "0.1.18", features = ["client", "http1", "server", "tokio"] }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls"] }
rand = "0.9.2"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "ring", "tls12"] }
toml = "0.9.8"
url = "2.5.7"

[dev-dependencies]
